--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Main MFP Configuration SENZA / finale
-MFP="https://mfp.tuttipresi.uk"
-PSW="123"
+MFP=https://mfp.tuttipresi.uk
+PSW=123
 
 # se questi sono compilati i link mpd utilizzeranno questi due valori mentre tutti gli altri MFP e PSW (fatto per usare render sugli script hat thisnot e FILEmpd)
 MFP2=""
