--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Main MFP Configuration SENZA / finale
-MFP="https://mfp.tuttipresi.uk"
-PSW="123"
+MFP="https://passaggio.onrender.com"
+PSW="Leggila"
 
 # se questi sono compilati i link mpd utilizzeranno questi due valori mentre tutti gli altri MFP e PSW (fatto per usare render sugli script hat thisnot e FILEmpd)
 MFP2=""
@@ -8,14 +8,15 @@ PSW2=""
 
 #Pigzilla
 RBT_GIT_HTML_BASE_URL="https://github.com/ciccioxm3/OMGTV/tree/main/download/"
-
+#proxy pigzilla
+PZPROXY="linkproxy tvproxy"
 
 HEADER="&h_user-agent=VAVOO/2.6&h_referer= https://vavoo.to/"
 
-NOMEGITHUB=nomegit
-NOMEREPO=nomerepo
+NOMEGITHUB=KastroMugnaio
+NOMEREPO=OGG2
 
 SPZO="yoga"
-GUARCAL="team"
+GUARCAL="sbs"
 DADDY="dad"
 SKYSTR="yoga"
